[gd_scene load_steps=3 format=3 uid="uid://85y3el742fao"]

[ext_resource type="Script" path="res://misc/deadscreen/dead_screen.gd" id="1_f7huk"]
[ext_resource type="Theme" uid="uid://6qrfrr3nx70f" path="res://units/fcc/fcc_assets/fcc_buttons.tres" id="2_ljue0"]

[node name="Dead_Screen" type="ColorRect"]
process_mode = 3
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
script = ExtResource("1_f7huk")

[node name="sure" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 204.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.545098)

[node name="Label" type="Label" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "Warning: All your upgrades made in the VOID will be reset.
Only Engion in the storage will persist."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -196.0
offset_right = 52.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "You have been forced to Evacuated."

[node name="exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 108.0
offset_right = 64.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ljue0")
text = "Exit The VOID"

[node name="hi_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -68.0
offset_right = 512.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
text = "High Score: %s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -20.0
offset_right = 512.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: %s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="e_store" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = 28.0
offset_right = 512.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
text = "Engion: %s"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
